--- a/XiuCaiFileServer/XiuCai_FileServer.csproj
+++ b/XiuCaiFileServer/XiuCai_FileServer.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Main.ico" />
+    <None Include="Resources\收款码.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
